[package]
name = "minesweeper_rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
getrandom = { version = "^0.2", features = ["js"] }
log = "^0.4"
rand = "^0.8"
wasm-logger = "^0.2"
wasm-bindgen = "^0.2"
web-sys = { version = "^0.3.60", features = [ "Element", "MouseEvent", "DomRect" ] }
yew = "^0.19"
gloo = "^0.8"
gloo-console = "^0.2"

[profile.release]
lto = true
